# cast-app

./: CMakeLists.txt  test.qml
examples/: hello-text.qml
src/avahi/: CMakeLists.txt  browser.cpp  browser.h  plugin.cpp  plugin.h  qmldir
src/cast/: CMakeLists.txt  browser.cpp  browser.h  cast-model.h  caster.cpp  caster.h  channel.cpp  channel.h  connection-channel.cpp  connection-channel.h  connection-interface.cpp  connection-interface.h  heartbeat-channel.cpp  heartbeat-channel.h  heartbeat-interface.cpp  heartbeat-interface.h  interface.cpp  interface.h  media-interface.cpp  media-interface.h  plugin.cpp  plugin.h  qmldir  receiver-channel.cpp  receiver-channel.h  receiver-interface.cpp  receiver-interface.h
src/cast/proto/: README.txt
